# bot_especialist

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app-config.yml  pyproject.toml  requirements.txt  setup.py  terraform.tfstate
.github/actions/docker-build-push/: action.yml
.github/actions/poetry-install/: action.yml
.github/actions/provision-build-push/: action.yml
.github/actions/run-unit-tests/: action.yml
.github/actions/set-env-vars/: action.yml
.github/actions/set-version/: action.yml
.github/bootstrap/: provisioning.sh
.github/workflows/: build-deploy-dev.yml  main.yml
assets/configs/: app-configs-example.yml  app-configs.yml
assets/kubernetes/: deployment.yaml  service.yaml
experiements/: rag_experimentation_langchain.ipynb  rag_experimentation_llama_index_auto_merging.ipynb  rag_experimentation_llama_index_sentence_window_retrieval.ipynb  rag_experimentation_llama_index_sentence_window_retrieval2.ipynb  rag_experimentation_template.ipynb
experiements/assets/json/: QA_groundTruth.json
experiements/assets/yaml/: prompts.yaml
experiements/scripts/: generate_questions.py
src/: setup.py
src/bash/: deprovision-all-resources.sh  provisioning.sh  run_container.sh
src/bot_especialist/app/: api.py  bot.py
src/bot_especialist/databases/: cloud_sql.py  db.py  sql.py  vector_store.py
src/bot_especialist/experiments/.pkg/: requirements.txt
src/bot_especialist/models/: configs.py  connections.py  data.py
src/bot_especialist/pipelines/airflow/DAGs/: evaluations.py  test_pipeline.py
src/bot_especialist/pipelines/beam/Plugins/: test.py
src/bot_especialist/utils/: tools.py
src/queries/: create_track_tables.sql  testing-alloydb.sql
terraform/environment/: main.tf  network.tf  variables.tf
terraform/environments/dev/: main.tf  outputs.tf  terraform.tfvars
terraform/environments/production/: main.tf  terraform.tfvars
terraform/environments/staging/: terraform.tfvars
terraform/modules/bot_api/: main.tf  variables.tf
terraform/modules/ingestion_pipeline/: main.tf  outputs.tf  variables.tf
tests/: test_fake.py
