[tool.poetry]
name = "bot_especialist"
version = "1.0.0"
description = ""
authors = ["lucasvittal2 <lucasvittal@gmail.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^4.0.1"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
apache-airflow = {version = "2.7.3", python = ">=3.10,<3.12"}
apache-airflow-providers-common-sql = "1.8.0"
apache-airflow-providers-ftp = "3.6.0"
apache-airflow-providers-http = "4.6.0"
apache-airflow-providers-imap = "3.4.0"
apache-airflow-providers-slack = "^8.5.1"
apache-airflow-providers-sqlite = "3.5.0"
Flask = "2.2.5"
Flask-AppBuilder = "4.3.6"
Flask-Babel = "2.0.0"
Flask-Caching = "2.1.0"
Flask-JWT-Extended = "4.5.3"
Flask-Limiter = "3.5.0"
Flask-Login = "0.6.3"
Flask-SQLAlchemy = "2.5.1"
Flask-Session = "0.5.0"
Flask-WTF = "1.2.1"
Jinja2 = "3.1.2"
grpcio = "1.59.2"
gunicorn = "21.2.0"
oauth2client = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
